# template_django_celer_rabbitmq_postgres_rest

./: docker-compose.yml  pyproject.toml
core/: celery.py  urls.py  views.py
templates/: index.html
